crates/oxc_css_parser/tests/error/scss/at-rule/use/with-no-arguments.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `(`, but found `;`
  ┌─ with-no-arguments.scss:1:18
  │
1 │ @use "other" with;
  │                  ^


